bk_ida/gccida/g1/_cpp_lex_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1267:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 * cpp_lex_token( cpp_reader_0 *pfile) 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1267:36: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
const cpp_token_0 * cpp_lex_token( cpp_reader_0 *pfile) 
                                   ^~~~~~~~~~~~
                                   cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1269:1: error: unknown type name 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *tokenrun; // rax 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpphash.h:97:25: note: 'tokenrun' declared here
typedef struct tokenrun tokenrun;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1270:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *cur_token; // rbp 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1271:1: error: use of undeclared identifier 'tokenrun_0'; did you mean 'tokenrun'?
tokenrun_0 *cur_run; // rdi 
^~~~~~~~~~
tokenrun
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1269:13: note: 'tokenrun' declared here
tokenrun_0 *tokenrun; // rax 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1271:13: error: use of undeclared identifier 'cur_run'
tokenrun_0 *cur_run; // rdi 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1274:23: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void ( *line_change)( cpp_reader_0 *, const cpp_token_0 *, int); // rax 
                      ^~~~~~~~~~~~
                      cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1274:45: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
void ( *line_change)( cpp_reader_0 *, const cpp_token_0 *, int); // rax 
                                            ^~~~~~~~~~~
                                            cpp_token
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1280:1: error: use of undeclared identifier 'cur_run'
cur_run = pfile->cur_run; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1281:26: error: use of undeclared identifier 'cur_run'
if ( pfile->cur_token == cur_run->limit ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/cpplex.c:1283:18: error: expected identifier or '('
 struct tokenrun = next_tokenrun( cur_run); 
                 ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/_cpp_lex_token/src/obj/cpplex.o] Error 1
